Fix on/off label sections being wrong height when rendering with no label

--- a/src/less/bootstrap2/react-bootstrap-switch.less
+++ b/src/less/bootstrap2/react-bootstrap-switch.less
@@ -75,10 +75,10 @@
     border-left: 1px solid @btnBorder;
     border-right: 1px solid @btnBorder;
     .buttonBackground(@btnBackground, @btnBackgroundHighlight, @grayDark);
-    
-    &::before {
-      content: "\200b";
-    }
+  }
+
+  span::before {
+    content: "\200b";
   }
 
   .@{bootstrap-switch-base}-handle-on {
