--- a/src/less/bootstrap3/react-bootstrap-switch.less
+++ b/src/less/bootstrap3/react-bootstrap-switch.less
@@ -77,10 +77,10 @@
     z-index: 100;
     color: @btn-default-color;
     background: @btn-default-bg;
-    
-    &::before {
-      content: "\200b";
-    }
+  }
+
+  span::before {
+    content: "\200b";
   }
 
   .@{bootstrap-switch-base}-handle-on {
